# Tale-Of-Fridge

./: .gitignore  CMakeLists.txt  README.md
_builds/: CMakeCache.txt  Makefile  cmake_install.cmake  taleOfFridge
_builds2/: CMakeCache.txt  Makefile  cmake_install.cmake  taleOfFridge
debug/: CMakeCache.txt  Makefile  cmake_install.cmake  taleOfFridge
includes/: controller.h  entity.h  item.h  map.h  mapController.h  player.h  room.h  usables.h  weapons.h  yamlParser.h
src/: controller.cpp  controller.h  entity.cpp  entity.h  fileLoader.cpp  fileLoader.h  item.cpp  item.h  main.cpp  map.cpp  mapController.cpp  player.cpp  player.h  room.cpp  test.cpp  toLower  usables.cpp  weapons.cpp  yamlParser.cpp
tbuild/: CMakeCache.txt  Makefile  cmake_install.cmake  taleOfFridge
tbuild2/: CMakeCache.txt  Makefile  cmake_install.cmake  taleOfFridge
textAssets/: iRemember.txt  iRememberMyName.txt  myName.txt  story1.txt  welcome.txt
textAssets/1/: 1.txt
textAssets/TheStory/: theStory.txt
textAssets/itemDescriptions/: theBlade.txt
yamlAssets/intro/: intro.yml
yamlAssets/objects/: jester.yaml  pain.yaml  player.yaml  potion.yaml  sword.yaml  sword.yml
yamlAssets/rooms/: aClearing.yaml  cityPath.yaml  intro.yml  intro2.yaml  rubble.yaml
yamlAssets/story/: bladeName.yaml  iRemember.yaml  intro.yaml  intro.yml  perhaps.yml
